distri/moquette.sh: gc1 parameters added distri/moquette.sh: line delimeter changed to unix style